pages/index.module.css
.hero {
  color: var(--black);
}

.greeting {
  margin: 80px 0;
  width: 100%;
  line-height: 1.1;
  font-size: 48px;
}
@media (min-width: 632px) {
  .greeting {
    font-size: 64px;
  }
}

.greeting span {
  color: var(--primaryColor);
}
.greeting a {
  text-decoration: none;
}

.title {
  color: var(--black);
  margin-bottom: 0px;
  margin-top: 8px;
}
.title:hover {
  color: var(--primaryColor);
}

.projectContainer {
  margin-top: 80px;
}

.cardContainer {
  margin-bottom: 16px;

  display: grid;
  grid-template-columns: 1fr;
  gap: 16px;
}
@media (min-width: 632px) {
  .cardContainer {
    margin-bottom: 80px;

    gap: 24px;

    grid-template-columns: 1fr 1fr;
  }
}

.filmPostHeader {
  display: flex;
}

.filmPoster {
  flex-shrink: 0;
  width: 133px;
}

.filmTitle {
  color: var(--black);
  margin: 0px;
}
.filmTitle:hover {
  color: var(--primaryColor);
}

.filmReview > * {
  margin: 0.4em 0 0.2em;
}

.tweet {
  color: var(--black);
  margin: 0;
  margin-bottom: 0.2em;
}
.tweet:hover {
  color: var(--primaryColor);
}

